k8s/motion-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motion-api-deployment
  namespace: motion
  labels:
    component: motion-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: motion-api
  template:
    metadata:
      labels:
        component: motion-api
    spec:
      containers:
      - name: motion-api
        image: callezenwaka/motion-api
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 4000
            name: api-port
            protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
              path: /healthz
              port: 4000
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
              path: /healthz
              port: 4000
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: motion-api-service
  namespace: motion
spec:
  type: ClusterIP
  selector:
    component: motion-api
  ports:
    - port: 4000
      protocol: TCP
      name: api-port
      targetPort: 4000
