k8s/motion-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motion-ingress
  namespace: motion
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: motion-ip
    networking.gke.io/managed-certificates: motion-cert
spec:
  rules:
  - host: motion.com 
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: motion-web-service
            port:
              number: 8080
      - pathType: ImplementationSpecific
        path: /api/*
        backend:
          service:
            name: motion-api-service
            port:
              number: 4000
  - host: doc.motion.com 
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: motion-doc-service
            port:
              number: 8080
  - host: pay.motion.com 
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: motion-pay-service
            port:
              number: 8080
